[package]
name = "sofar"
version = "0.2.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Tomasz Andrzejak <andreiltd@gmail.com>"]
keywords = ["libmysofa", "hrtf", "aes69"]
description = "Rust bindings for the libmysofa library"
repository = "https://github.com/andreiltd/sofar"
homepage = "https://github.com/andreiltd/sofar"
categories = ["algorithms", "filesystem", "multimedia::audio"]

[features]
default = ["dsp"]
dsp = ["dep:realfft"]

[workspace]
members = ["libmysofa-sys"]

[dependencies]
ffi = { package = "libmysofa-sys", version = "0.2", path = "libmysofa-sys" }
realfft = {version = "3.4", optional = true}
thiserror = "1"

[dev-dependencies]
anyhow = "1.0"
assert_approx_eq = "1.1"
hound = "3.5"
cpal = "0.15"
criterion = "0.5"
rand = "0.8"
ringbuf = "0.4"

[[bench]]
name = "renderer"
harness = false
required-features = ["dsp"]

[[example]]
name = "renderer"
required-features = ["dsp"]
