[package]
name = "sofar"
version = "0.2.1"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Tomasz Andrzejak <andreiltd@gmail.com>"]
keywords = ["libmysofa", "hrtf", "aes69"]
description = "Pure Rust SOFA/HRTF reader and renderer"
repository = "https://github.com/andreiltd/sofar"
homepage = "https://github.com/andreiltd/sofar"
categories = ["algorithms", "filesystem", "multimedia::audio"]

[features]
default = ["dsp", "resample"]
dsp = ["dep:realfft"]
resample = ["dep:rubato", "dep:audioadapter-buffers"]

[workspace]
members = ["libmysofa-sys"]

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.9.1"
log = "0.4.27"
miniz_oxide = "0.8.9"
realfft = {version = "3.4", optional = true}
rubato = {version = "1.0.1", optional = true}
audioadapter-buffers = {version = "2.0", optional = true}
thiserror = "2"
winnow = "0.7.11"

[dev-dependencies]
anyhow = "1.0"
arc-swap = "1"
assert_approx_eq = "1.1"
hound = "3.5"
cpal = "0.17"
criterion = "0.5"
rand = "0.9"
ringbuf = "0.4"

[[bench]]
name = "renderer"
harness = false
required-features = ["dsp"]

[[example]]
name = "renderer"
required-features = ["dsp"]
