[package]
name = "sofar"
version = "0.3.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Tomasz Andrzejak <andreiltd@gmail.com>"]
keywords = ["libmysofa", "hrtf", "aes69"]
description = "Pure Rust SOFA/HRTF reader and renderer"
repository = "https://github.com/andreiltd/sofar"
homepage = "https://github.com/andreiltd/sofar"
categories = ["algorithms", "filesystem", "multimedia::audio"]

[features]
default = ["dsp", "resample"]
dsp = ["dep:realfft"]
resample = ["dep:rubato", "dep:audioadapter-buffers"]

[workspace]
members = ["libmysofa-sys"]

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.11.1"
log = "0.4.30"
miniz_oxide = "0.9.1"
realfft = {version = "3.5.0", optional = true}
rubato = {version = "4.0.0", optional = true}
audioadapter-buffers = {version = "3.0.0", optional = true}
thiserror = "2.0.18"
winnow = "1.0.3"

[dev-dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
assert_approx_eq = "1.1.0"
hound = "3.5.1"
cpal = "0.17.3"
criterion = "0.8.2"
rand = "0.10.1"
ringbuf = "0.5.0"

[[bench]]
name = "renderer"
harness = false
required-features = ["dsp"]

[[example]]
name = "renderer"
required-features = ["dsp"]
