[package]
name = "sofar-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sofar = { package = "sofar", version = "*", path = "../sofar-core" }
realfft = "3.0"
thiserror = "1"
paste = "1"
once_cell = "1"

[dev-dependencies]
assert_approx_eq = "*"
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "renderer"
harness = false
